--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js -e js,hbs"
   },
   "keywords": [],
   "author": "",
@@ -11,7 +12,6 @@
   "dependencies": {
     "express": "^4.17.1",
     "hbs": "^4.1.1",
-    "package-lock.json": "^1.0.0",
     "request": "^2.88.2"
   },
   "repository": {
@@ -22,5 +22,8 @@
     "url": "https://github.com/21jon/web-server-nodec/issues"
   },
   "homepage": "https://github.com/21jon/web-server-nodec#readme",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^2.0.6"
+  }
 }
